apps/base/lux-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lux-api
  labels:
    app.kubernetes.io/name: lux-api
    app.kubernetes.io/component: ai
